--- a/src/app/ui/addform-worker/addform-worker.component.html
+++ b/src/app/ui/addform-worker/addform-worker.component.html
@@ -11,8 +11,7 @@
         <input type="text" class="form-control" placeholder="Имя" formControlName="name" />
         <div class="alert alert-danger"
           *ngIf="workerForm.controls['name'].invalid && workerForm.controls['name'].touched">
-          <strong>Некорректное имя</strong><br>
-          Имя должно начинаться с заглавной буквы и содержать только буквы
+          Некорректное имя
         </div>
       </div>
     </div>
@@ -22,21 +21,21 @@
         <input type="text" class="form-control" placeholder="Фамилия" formControlName="surname" />
         <div class="alert alert-danger"
           *ngIf="workerForm.controls['surname'].invalid && workerForm.controls['surname'].touched">
-          <strong>Некорректная фамилия</strong><br>
-          Фамилия должна начинаться с заглавной буквы и содержать только буквы
+          Некорректная фамилия
         </div>
       </div>
     </div>
     <div class="col-3">
       <div class="form-group">
         <label for="number">Телефон</label>
-        <input [textMask]="{mask: mask, showMask: true}"
+        <input [textMask]="{mask: mask, keepCharPositions:true}"
          type="text"
           class="form-control"
-          formControlName="number">
+          formControlName="number"
+          placeholder="Телефон">
         <div class="alert alert-danger"
           *ngIf="workerForm.controls['number'].invalid && workerForm.controls['number'].touched">
-          <strong>Некорректный номер телефона</strong>
+          Некорректный номер телефона
         </div>
       </div>
     </div>
@@ -57,5 +56,4 @@
       <button type="submit" class="btn btn-outline-primary btn-md" [disabled]="!workerForm.valid">Добавить</button>
     </div>
   </div>
-
 </form>
